--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_GOOGLE_MAPS_API_KEY=AIzaSyBRDlvJOTJYDmVsm3HKGeUjoZjgvlAxquE
 # AIzaSyBHvnA7YyT8A4FqGJzv2cmK1GJPk5QP-lc
+# AIzaSyAiBBG3mp9DjIydSmBo4FdHJKRsAREZgcc, NEW
